// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base demo works fine 1`] = `
<div
  class="tag-demo"
>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark"
  >
    <!---->
    
     默认 
    
    
  </span>
  <a
    href="https://www.tencent.com/zh-cn"
    target="_blank"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      超链接
      
      
    </span>
  </a>
</div>
`;

exports[`Tag delete demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tag-block"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--dark t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block light"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--light t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block plain"
  >
    <span
      class="t-tag t-tag--primary t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签一 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签二 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签三 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-size-m t-tag--plain t-tag--close"
    >
      <!---->
      
       标签四 
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block"
  >
    
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close t-is-disabled t-tag--disabled"
      style="max-width: 100px;"
    >
      <!---->
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
      style="max-width: 100px;"
    >
      <svg
        class="t-icon t-icon-discount"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close t-is-disabled t-tag--disabled"
    >
      <!---->
      
      可删除标签
      
      <svg
        class="t-icon t-icon-close"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"
        />
      </svg>
    </span>
    
  </div>
  <div
    class="tag-block editable"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      <svg
        class="t-icon t-icon-add"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M544 160L544 480 864 480 864 544 544 544 544 864 480 864 480 544 160 544 160 480 480 480 480 160 544 160Z"
          fill-rule="evenodd"
        />
      </svg>
       添加标签 
      
      
    </span>
  </div>
</div>
`;

exports[`Tag icon demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <svg
        class="t-icon t-icon-discount"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      
       默认标签 
      
      
    </span>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      
      <svg
        class="t-icon t-icon-discount"
        version="1.1"
        viewBox="0 0 1024 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
          fill-opacity=".9"
          fill-rule="evenodd"
        />
      </svg>
      
      
       Icon插槽 
      
      
    </span>
  </div>
</div>
`;

exports[`Tag long-text demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis"
    style="max-width: 150px;"
    title="默认超八个字超长文本标签超长省略文本标签"
  >
    <!---->
    <span
      class="t-tag--text"
      style="max-width: 150px;"
    >
      
       默认超八个字超长文本标签超长省略文本标签 
      
    </span>
    
  </span>
</div>
`;

exports[`Tag plain demo works fine 1`] = `
<div
  class="tdesign-tag-plain"
>
  <span
    class="t-tag t-tag--primary t-size-m t-tag--plain"
  >
    <!---->
    
     标签一 
    
    
  </span>
  <span
    class="t-tag t-tag--success t-size-m t-tag--plain"
  >
    <!---->
    
     标签二 
    
    
  </span>
  <span
    class="t-tag t-tag--default t-size-m t-tag--plain"
  >
    <!---->
    
     标签三 
    
    
  </span>
  <span
    class="t-tag t-tag--warning t-size-m t-tag--plain"
  >
    <!---->
    
     标签四 
    
    
  </span>
  <span
    class="t-tag t-tag--danger t-size-m t-tag--plain"
  >
    <!---->
    
     标签五 
    
    
  </span>
</div>
`;

exports[`Tag selectable demo works fine 1`] = `
<div
  class="tag-demo"
>
  
  <span
    class="t-tag t-tag--check t-tag--default t-tag--checked"
  >
    
    选中
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default"
  >
    
    未选
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default t-tag--disabled"
  >
    
    Disabled
    
  </span>
  
</div>
`;

exports[`Tag shape demo works fine 1`] = `
<div
  class="tag-demo"
>
  <div
    class="tdesign-demo-block"
  >
     正常 
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark"
    >
      <!---->
      
      标签一
      
      
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark"
    >
      <!---->
      
       标签一 
      
      
    </span>
  </div>
  <div
    class="tdesign-demo-block"
  >
     圆角 
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--round"
    >
      <!---->
      
       标签一 
      
      
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--round"
    >
      <!---->
      
       标签一 
      
      
    </span>
  </div>
  <div
    class="tdesign-demo-block"
  >
     标记 
    <span
      class="t-tag t-tag--default t-size-m t-tag--dark t-tag--mark"
    >
      <!---->
      
       标签一 
      
      
    </span>
    <span
      class="t-tag t-tag--primary t-size-m t-tag--dark t-tag--mark"
    >
      <!---->
      
       标签一 
      
      
    </span>
  </div>
</div>
`;

exports[`Tag size demo works fine 1`] = `
<div
  class="tag-demo"
>
  <span
    class="t-tag t-tag--default t-size-s t-tag--dark"
  >
    <!---->
    
     小型标签 
    
    
  </span>
  <span
    class="t-tag t-tag--default t-size-m t-tag--dark"
  >
    <!---->
    
    默认标签
    
    
  </span>
  <span
    class="t-tag t-tag--default t-size-l t-tag--dark"
  >
    <!---->
    
     大型标签 
    
    
  </span>
</div>
`;
